Replace StringFilter with EnumFilter and update related references
