# src/api/index.ts
@@ -11,6 +11,7 @@ export { Assessment } from './models/Assessment';
 export type { CompleteTaskRequest } from './models/CompleteTaskRequest';
 export type { CompleteTaskResponse } from './models/CompleteTaskResponse';
 export type { DateFilter } from './models/DateFilter';
+export type { EnumFilter } from './models/EnumFilter';
 export type { Filter } from './models/Filter';
 export type { GetActiveTasksResponse } from './models/GetActiveTasksResponse';
 export type { GetPlayerBalanceResponse } from './models/GetPlayerBalanceResponse';
@@ -46,12 +47,12 @@ export type { SearchPlayerBalanceTransactionsRequest } from './models/SearchPlay
 export type { SearchPlayerBalanceTransactionsResponse } from './models/SearchPlayerBalanceTransactionsResponse';
 export type { SkipTaskRequest } from './models/SkipTaskRequest';
 export type { Sort } from './models/Sort';
-export type { StringFilter } from './models/StringFilter';
 export type { Task } from './models/Task';
 export { TaskRarity } from './models/TaskRarity';
 export { TaskTopic } from './models/TaskTopic';
 export type { TgAuthData } from './models/TgAuthData';
 export type { TgUserData } from './models/TgUserData';
+export type { TgWebAppChat } from './models/TgWebAppChat';
 export type { TgWebAppData } from './models/TgWebAppData';
 export type { UpdateUserLocaleRequest } from './models/UpdateUserLocaleRequest';
 export type { User } from './models/User';
